kubernetes/manifests/kube-vip.k8s.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kube-vip
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: kube-vip-helm-c8710cc0
      app.kubernetes.io/name: kube-vip
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: kube-vip-helm-c8710cc0
        app.kubernetes.io/name: kube-vip
    spec:
      containers:
        - args:
            - manager
          image: ghcr.io/kube-vip/kube-vip:v0.8.4
          imagePullPolicy: IfNotPresent
          name: kube-vip
          resources: {}
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
              drop:
                - ALL
      hostNetwork: true
      serviceAccountName: kube-vip
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
          operator: Exists
