kubernetes/manifests/kured.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kured
  namespace: kured
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/instance: kured-helm-c8b3d86f
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kured
    helm.sh/chart: kured-5.6.0
  name: kured-helm-c8b3d86f
  namespace: kured
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: kured-helm-c8b3d86f
      app.kubernetes.io/name: kured
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: kured-helm-c8b3d86f
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: kured
        helm.sh/chart: kured-5.6.0
    spec:
      containers:
        - args:
            - --ds-name=kured-helm-c8b3d86f
            - --ds-namespace=kured
            - --metrics-port=8080
            - --reboot-sentinel=/sentinel/reboot-required
            - --reboot-command=/bin/systemctl reboot
            - --time-zone=America/Los_Angeles
            - --annotate-nodes=true
            - --log-format=json
            - --concurrency=1
          command:
            - /usr/bin/kured
          image: ghcr.io/kubereboot/kured:1.17.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /metrics
              port: metrics
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: kured
          ports:
            - containerPort: 8080
              name: metrics
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /metrics
              port: metrics
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          resources: {}
          securityContext:
            privileged: true
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /sentinel
              name: sentinel
              readOnly: true
      hostNetwork: false
      hostPID: true
      nodeSelector:
        kubernetes.io/os: linux
      restartPolicy: Always
      serviceAccountName: kured-helm-c8b3d86f
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
      volumes:
        - hostPath:
            path: /var/run
            type: Directory
          name: sentinel
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
