kubernetes/manifests/bluesky-pds.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bluesky-pds
  namespace: bluesky-pds
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bluesky-pds-app-bluesky-pds-deployment-c861ae04
  namespace: bluesky-pds
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: bluesky-pds-app-bluesky-pds-deployment-c8f5e614
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: bluesky-pds-app-bluesky-pds-deployment-c8f5e614
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: PDS_HOSTNAME
              value: at.drigs.org
            - name: PDS_JWT_SECRET
              valueFrom:
                secretKeyRef:
                  key: password
                  name: bluesky-pds-jwt-secret-c818f13e
            - name: PDS_ADMIN_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: bluesky-pds-admin-password-c847bc3c
            - name: PDS_PLC_ROTATION_KEY_K256_PRIVATE_KEY_HEX
              valueFrom:
                secretKeyRef:
                  key: password
                  name: bluesky-pds-plc-rotation-key-c8d306ef
            - name: PDS_DATA_DIRECTORY
              value: /pds
            - name: PDS_BLOB_UPLOAD_LIMIT
              value: "104857600"
            - name: PDS_DID_PLC_URL
              value: https://plc.directory
            - name: PDS_BSKY_APP_VIEW_URL
              value: https://api.bsky.app
            - name: PDS_BSKY_APP_VIEW_DID
              value: did:web:api.bsky.app
            - name: PDS_REPORT_SERVICE_URL
              value: https://mod.bsky.app
            - name: PDS_REPORT_SERVICE_DID
              value: did:plc:ar7c4by46qjdydhdevvrndac
            - name: PDS_CRAWLERS
              value: https://bsky.network
            - name: PDS_RATE_LIMITS_ENABLED
              value: "true"
            - name: PDS_INVITE_REQUIRED
              value: "true"
            - name: PDS_SERVICE_HANDLE_DOMAINS
              value: .drigs.org
            - name: LOG_ENABLED
              value: "true"
            - name: PDS_BLOBSTORE_S3_BUCKET
              value: pds-drigs-blobs
            - name: PDS_BLOBSTORE_S3_ENDPOINT
              value: https://s3.us-east-005.backblazeb2.com
            - name: PDS_BLOBSTORE_S3_REGION
              value: us-east-005
            - name: PDS_BLOBSTORE_S3_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  key: password
                  name: bluesky-pds-blob-access-key-c822eaf7
            - name: PDS_BLOBSTORE_S3_SECRET_KEY
              valueFrom:
                secretKeyRef:
                  key: password
                  name: bluesky-pds-blob-secret-key-c8033a09
            - name: AWS_ACCESS_KEY_ID
              valueFrom:
                secretKeyRef:
                  key: password
                  name: bluesky-pds-blob-access-key-c822eaf7
            - name: AWS_SECRET_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  key: password
                  name: bluesky-pds-blob-secret-key-c8033a09
            - name: PDS_BLOBSTORE_S3_FORCE_PATH_STYLE
              value: "true"
            - name: PDS_BLOBSTORE_DISK_LOCATION
              value: ""
            - name: PDS_EMAIL_SMTP_URL
              valueFrom:
                secretKeyRef:
                  key: password
                  name: bluesky-pds-smtp-url-c835e4c6
            - name: PDS_EMAIL_FROM_ADDRESS
              value: admin@bluesky.drigs.org
          image: ghcr.io/bluesky-social/pds:0.4.208
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /xrpc/_health
              port: 3000
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 5
          name: pds
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /xrpc/_health
              port: 3000
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /xrpc/_health
              port: 3000
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /pds
              name: pvc-bluesky-pds-app-data-pvc-c88bf852
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-bluesky-pds-app-data-pvc-c88bf852
          persistentVolumeClaim:
            claimName: bluesky-pds-app-data-pvc-c88bf852
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: bluesky-pds-app-service-c83d1dd2
  namespace: bluesky-pds
spec:
  externalIPs: []
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    cdk8s.io/metadata.addr: bluesky-pds-app-bluesky-pds-deployment-c8f5e614
  type: ClusterIP
