kubernetes/manifests/dawarich.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dawarich
  namespace: dawarich
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dawarich-valkey-deployment-c89341aa
  namespace: dawarich
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: dawarich-valkey-deployment-c88d7ead
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: dawarich-valkey-deployment-c88d7ead
    spec:
      automountServiceAccountToken: false
      containers:
        - command:
            - valkey-server
            - --save
            - "30"
            - "1"
            - --loglevel
            - warning
          image: docker.io/valkey/valkey:8-alpine
          imagePullPolicy: Always
          name: valkey
          ports:
            - containerPort: 6379
              name: valkey
          resources:
            limits:
              cpu: 2000m
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - SETGID
                - SETUID
                - DAC_OVERRIDE
              drop:
                - ALL
            privileged: true
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /data
              name: pvc-dawarich-valkey-pvc-c81fd6d0
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-dawarich-valkey-pvc-c81fd6d0
          persistentVolumeClaim:
            claimName: dawarich-valkey-pvc-c81fd6d0
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: dawarich-valkey-service-c8d9e822
  namespace: dawarich
spec:
  externalIPs: []
  ports:
    - name: http
      port: 6379
      targetPort: 6379
  selector:
    cdk8s.io/metadata.addr: dawarich-valkey-deployment-c88d7ead
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dawarich-app-deployment-c88f7419
  namespace: dawarich
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: dawarich-app-deployment-c855b612
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: dawarich-app-deployment-c855b612
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - bin/rails
            - server
            - -p
            - "3000"
            - -b
            - "::"
          command:
            - web-entrypoint.sh
          image: freikin/dawarich:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/v1/health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          name: web
          ports:
            - containerPort: 3000
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/v1/health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 2000m
              memory: 2048Mi
            requests:
              cpu: 200m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: false
            runAsNonRoot: false
        - args:
            - bundle
            - exec
            - sidekiq
          command:
            - sidekiq-entrypoint.sh
          image: freikin/dawarich:latest
          imagePullPolicy: Always
          name: worker
          resources:
            limits:
              cpu: 2000m
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: false
            runAsNonRoot: false
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      serviceAccountName: dawarich-app-service-account-c80f5f64
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    dawarich/monitoring: "false"
  name: dawarich-app-service-c8c8c771
  namespace: dawarich
spec:
  externalIPs: []
  ports:
    - name: http
      port: 3000
      protocol: TCP
  selector:
    cdk8s.io/metadata.addr: dawarich-app-deployment-c855b612
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
  name: dawarich-ingress-c823fb6f
  namespace: dawarich
spec:
  ingressClassName: nginx
  rules:
    - host: dawarich.us-drig-1.drigs.org
      http:
        paths:
          - backend:
              service:
                name: dawarich-app-service-c8c8c771
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - dawarich.us-drig-1.drigs.org
      secretName: dawarich-dawarich-app-service-c8c8c771-tls-c887ce67
